# steamlayer

./: .gitignore  .pre-comit-config.yml  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  LICENSE  README.md  dump.py  index.html  main.py  mkdocs.yml  objects.inv  package.json  project_dump.txt  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish.yml
core/: index.html
core/api/client/: index.html
core/api/events/: index.html
core/api/exceptions/: index.html
core/api/models/: index.html
docs/: index.md
docs/api/: client.md  events.md  exceptions.md
docs/core/api/: client.md  exceptions.md  models.md
search/: search_index.json
steamlayer/: __init__.py  __main__.py  constants.py  core.py  fileops.py  game.py  http_client.py  io_utils.py  logging_utils.py  state.py
steamlayer/bootstrap/: __init__.py  base.py  defender.py  goldberg.py  sevenzip.py  steamless.py
steamlayer/config/: __init__.py  defaults.py  resolver.py  writer.py
steamlayer/discovery/: __init__.py  decision.py  dlc.py  interaction.py  local.py  matcher.py  models.py  query_strategy.py  repository.py  resolver.py  web.py
steamlayer/emulators/: __init__.py
steamlayer/emulators/goldberg/: __init__.py  config.py  emulator.py
steamlayer/steamstub/: __init__.py  inspector.py  unpacker.py
steamlayer/tests/: test_bootstrap.py  test_discovery.py  test_fileops.py  test_game.py  test_interaction.py  test_resolver_local.py  test_steamstub.py
(+2 files in other folders)
